--- a/src/Pin.CricketDarts.Core/Pin.CricketDarts.Core.csproj
+++ b/src/Pin.CricketDarts.Core/Pin.CricketDarts.Core.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
