Add shared project with player Dto's

--- a/src/Pin.CricketDarts.Core/Pin.CricketDarts.Core.csproj
+++ b/src/Pin.CricketDarts.Core/Pin.CricketDarts.Core.csproj
@@ -15,4 +15,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Pin.CricketDarts.Shared\Pin.CricketDarts.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
