--- a/src/Pin.CricketDarts.Server/Pin.CricketDarts.Server.csproj
+++ b/src/Pin.CricketDarts.Server/Pin.CricketDarts.Server.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\Api\" />
+    <ProjectReference Include="..\Pin.CricketDarts.Shared\Pin.CricketDarts.Shared.csproj" />
   </ItemGroup>
 
 </Project>
