--- a/src/Pin.CricketDarts.Server/Pin.CricketDarts.Server.csproj
+++ b/src/Pin.CricketDarts.Server/Pin.CricketDarts.Server.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Connections.Common" Version="6.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core" Version="6.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Pin.CricketDarts.Shared\Pin.CricketDarts.Shared.csproj" />
   </ItemGroup>
 
